# a-em

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  api.html  configuration.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.py  test_sam_dm4.py  test_sam_dm4_debug.py  test_sam_dm4_detailed.py  test_sam_dm4_final.py
.github/workflows/: ci.yml  docs.yml  publish.yml
_modules/: index.html
_modules/a_em/: batch.html  config.html  core.html  io.html  pipeline.html  preprocess.html  reporter.html
_modules/a_em/analysis/: base.html  registry.html  soot.html
_modules/a_em/segmentation/: base.html  legacy.html  registry.html  sam_automask.html  traditional.html
_sources/: configuration.rst.txt  index.rst.txt  installation.rst.txt
a_em/: __init__.py  batch.py  config.py  core.py  io.py  pipeline.py  preprocess.py  reporter.py  segmentation_legacy.py
a_em/analysis/: __init__.py  base.py  registry.py  soot.py
a_em/segmentation/: __init__.py  base.py  legacy.py  registry.py  sam_automask.py  traditional.py
atem_analyzer/: __init__.py  batch.py  config.py  core.py  io.py  pipeline.py  preprocess.py  reporter.py  segmentation.py
atem_analyzer/analysis/: __init__.py  base.py  registry.py  soot.py
atem_analyzer/segmentation/: __init__.py  base.py  legacy.py  registry.py  sam_automask.py  traditional.py
docs/source/: api.rst  conf.py  quickstart.rst
examples/: batch_workflow.py  preview_all_dm4.py  sam_automask_40026.py  soot_workflow.py
test_output/: sam_best_mask.npy  sam_mask.npy  traditional_mask.npy
tests/: test_analysis_registry.py  test_analysis_soot.py  test_batch.py  test_config.py  test_core.py  test_integration_dm4.py  test_io.py  test_pipeline.py  test_sam_postfilter.py  test_segmentation_base.py  test_segmentation_init.py  test_segmentation_registry.py  test_segmentation_sam.py  test_segmentation_traditional.py
